--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,18 +14,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
       with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: gradle
+        arguments: assembleDebug
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-
-    - name: Build debug APK
-      run: ./gradlew assembleDebug
 
     - name: Upload debug APK
       uses: actions/upload-artifact@v4
