feat: implement search highlighting, checklist reordering, animations, locking, and home screen widget
- Added search query highlighting in NoteItem titles and content.
- Implemented Move Up/Down functionality for checklist items.
- Refined note expansion/collapse animations with expandIn/shrinkOut.
- Implemented per-note biometric locking with DB migration to v13.
- Added Home Screen Widget for Pinned Notes with deep-linking support.
- Refactored BiometricAuthManager for more flexible callback handling.
- Updated MainActivity to extend FragmentActivity for biometric support.
- Implemented widget update triggers in NotesViewModel and ProjectNotesViewModel.
- Fixed build errors related to event exhaustiveness and missing state fields.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,22 @@
             android:enabled="true"
             android:exported="false" />
 
+        <receiver
+            android:name=".widget.NoteWidgetProvider"
+            android:exported="true"
+            android:label="Pinned Notes">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/note_widget_info" />
+        </receiver>
+
+        <service
+            android:name=".widget.NoteWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
