Fix: Add missing GROQ_API_1 secret to bundleRelease step in GitHub Actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,7 @@ jobs:
         KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
         KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
         KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+        GROQ_API_1: ${{ secrets.GROQ_API_1 }}
 
     - name: Find AAB files
       run: find app/build/outputs/bundle/release -name "*.aab"
